Fix footer overlapping and feeding tip visibility issues

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -956,7 +956,7 @@ textarea:hover {
   position: relative;
   overflow: hidden;
   z-index: 1;
-  margin-top: -50px;
+  padding-top: 50px;
 }
 
 .container-banana {
